# agents-live

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/: agents-live.md  development.md  release.md  testing.md
.claude/agents/: recent-changes-reviewer.md
.claude/skills/changelog-maintenance/: SKILL.md
.github/agents/: recent-changes-reviewer.agent.md
.github/workflows/: publish.yml  test.yml
src/agents_live/: __init__.py  activate.py  agent_adapters.py  cli.py  cli_spec.py  completions.py  dashboard.py  doctor.py  headless.py  health_check.py  heartbeat.py  init.py  mcp_config_loader.py  migrate.py  ownership.py  paths.py  pipeline_mcp.py  pipeline_mcp_stdio_bridge.py  pipeline_runtime.py  plugins.py  preflight.py  prereqs.py  qlog.py  repos.py  run-hidden.vbs  run.py  smoketest.py  spawn.py  state_migration.py  status.py  stop.py  teardown.py  timeline.py  uninstall.py  update_check.py  upgrade.py  windows-heartbeat.sh
src/agents_live/skill/: SKILL.md
src/agents_live/skill/docs/: approach.md  changelog.md  commands.md  diagnostics.md  key-learnings.md  overview.md  release-process.md  windows-heartbeat.md
src/agents_live/skill/docs/reference/: cascade-modeling.md  copilot-cli-headless-guide.md  session-transcript-capture.md  wsl-runbook.md
src/agents_live/skill/templates/: agent.md  cron.md  handler-only.md  watcher.md
tests/: test_smoke.py
tests/golden/: doctor.txt  help.txt  status.txt
tools/: pre-release-audit.py  release.py
